--- a/templates/basic/layout.html
+++ b/templates/basic/layout.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <title>CicloVerso</title>
   <!-- CDN Bootstrap -->
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
@@ -12,6 +13,17 @@
 </head>
 
 <body>
+  <!--Alert messaggi flash-->
+  {% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    {% for category, message in messages %}
+      <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Chiudi"></button>
+      </div>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
     <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
