--- a/templates/basic/layout.html
+++ b/templates/basic/layout.html
@@ -5,172 +5,126 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <title>CicloVerso</title>
-  <!-- CDN Bootstrap -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <!-- CDN Bootstrap -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <!--Icone Bootstrap-->
+    <!-- Icone Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 
 <body>
   <!--Alert messaggi flash-->
   {% with messages = get_flashed_messages(with_categories=true) %}
-  {% if messages %}
-    {% for category, message in messages %}
-      <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-        {{ message }}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Chiudi"></button>
-      </div>
-    {% endfor %}
-  {% endif %}
-{% endwith %}
-    <nav class="navbar bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">
-      <img src="{{ url_for('static', filename='img/cicloverso_logo50x30.png') }}" alt="logo">
-      CicloVerso | Passion for cycling
-    </a>
-  </div>
-</nav>
+    {% if messages %}
+      {% for category, message in messages %}
+        <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+          {{ message }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Chiudi"></button>
+        </div>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
 
-{% if session.user_id %}
-        {% if session.ruolo == 'admin' or session.ruolo == 'root' %}
-    <!--NavbarAdmin-->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary "data-bs-theme="dark">
+  <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
-    <a class="navbar-brand" href="/logout">Logout</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/admin">Dashboard</a>
-        </li>
-      </nav>
-    <!--NavbarUser-->
-    {% else %}
-    <nav class="navbar navbar-expand-lg bg-body-tertiary "data-bs-theme="dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/logout">LogOut</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/userprenotazione">Prenota</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Servizi
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/biomeccanica">Biomeccanica</a></li>
-            <li><a class="dropdown-item" href="/manutenzione">Manutenzione</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/contatti">Contatti</a></li>
-            <li><a class="dropdown-item" href="/profilo">Profilo</a></li>
-          </ul>
-        </li>
-      </ul>
+      <a class="navbar-brand" href="/">
+        <img src="{{ url_for('static', filename='img/cicloverso_logo50x30.png') }}" alt="logo">
+        CicloVerso | Passion for cycling
+      </a>
     </div>
-  </div>
-</nav>
-{% endif %}
+  </nav>
+
+  {% if session.user_id %}
+    {% if session.ruolo == 'admin' or session.ruolo == 'root' %}
+      <!-- Navbar Admin -->
+      <nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/logout">Logout</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarAdmin" aria-controls="navbarAdmin" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarAdmin">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/admin">Dashboard</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/admin/crea_slot">Crea Slot</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/admin/prenotazioni">Prenotazioni</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     {% else %}
-    <nav class="navbar navbar-expand-lg bg-body-tertiary "data-bs-theme="dark">
+      <!-- Navbar User -->
+      <nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/logout">LogOut</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarUser" aria-controls="navbarUser" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarUser">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/utente/calendario">Prenota</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/utente/prenotazioni">Le tue prenotazioni</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/utente/profilo">Il tuo profilo</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    {% endif %}
+  {% else %}
+    <!-- Navbar Non loggato -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="/log_in">Login</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarAnonimo" aria-controls="navbarAnonimo" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarAnonimo">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/prenota">Prenota</a>
+              <a class="nav-link" href="/log_in">Login</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Servizi
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/biomeccanica">Biomeccanica</a></li>
-                <li><a class="dropdown-item" href="/manutenzione">Manutenzione</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="/contatti">Contatti</a></li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link" href="/registrati">Registrati</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    {% endif %}
-    
+  {% endif %}
 
-    {% block content %}
-    {% endblock %}
-<!--footer-->
-    <footer class="container py-5">
-  <div class="row">
-    <div class="col-12 col-md">
-      <img src="{{ url_for('static', filename='img/cicloverso_logo50x30.png') }}" alt="logo">
-<small class="d-block mb-3 text-body-secondary">©2024</small>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Features</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="link-secondary text-decoration-none" href="#">Cool stuff</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Random feature</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Team feature</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Stuff for developers</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Another one</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Last time</a></li>
-      </ul>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Resources</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="link-secondary text-decoration-none" href="#">Resource name</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Resource</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Another resource</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Final resource</a></li>
-      </ul>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Resources</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="link-secondary text-decoration-none" href="#">Business</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Education</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Government</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Gaming</a></li>
-      </ul>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Contatti</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="link-secondary text-decoration-none" href="#">Team</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Locations</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Privacy</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Terms</a></li>
-      </ul>
-    </div>
-  </div>
-</footer>
+  {% block content %}
+  {% endblock %}
 
+  <!-- Footer -->
+  <footer class="container py-5">
+    <div class="row">
+      <div class="col-12 col-md">
+        <img src="{{ url_for('static', filename='img/cicloverso_logo50x30.png') }}" alt="logo">
+        <small class="d-block mb-3 text-body-secondary">©2024</small>
+      </div>
+      <span>Fatto col <3 da Mauro Pot </span>
+  </footer>
 
-
-<!-- CDN Js Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <!-- CDN Js Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 </body>
 </html>
