--- a/templates/categoria/reimposta_password_token.html
+++ b/templates/categoria/reimposta_password_token.html
@@ -1,16 +1,14 @@
 {% extends "basic/layout.html" %}
-
 {% block content %}
-<form id="reimpostaPasswordToken" class="mx-auto w-25 p-3" method="POST" action="/reimposta_password/{{ token }}">
-  <div class="mb-3">
-    <label for="password" class="form-label">Nuova Password</label>
-    <input type="password" class="form-control" id="password" name="password" required>
-  </div>
-  <button type="submit" class="btn btn-primary">Reimposta Password</button>
-</form>
-{% if messages %}
-    {% for message in messages %}
-        <div class="alert alert-{{ message[1] }}">{{ message[0] }}</div>
-    {% endfor %}
-{% endif %}
+<div class="container mt-5">
+    <h2>Imposta una nuova password</h2>
+    <form method="POST">
+        <div class="mb-3">
+            <label for="password" class="form-label">Nuova Password</label>
+            <input type="password" class="form-control" id="password" name="password" required
+                   placeholder="Min 8 caratteri, uno speciale (!@#$...)">
+        </div>
+        <button type="submit" class="btn btn-success">Aggiorna Password</button>
+    </form>
+</div>
 {% endblock %}
